--- a/index.html
+++ b/index.html
@@ -1,1 +1,514 @@
+<!doctype html>
+<html lang="en">
+<head>
+<meta charset="utf-8">
+<title>Sublime Sounds – Rhythm Master</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<script src="https://notify.waxsweden.org/static/assets/waxjs.js"></script>
 
+<style>
+html,body{margin:0;padding:0;background:#050510;color:#fff;font-family:system-ui}
+main{max-width:1300px;margin:auto;padding:14px}
+h1{text-align:center}
+
+/* UI */
+button,select{
+  padding:10px 14px;border-radius:8px;border:none;
+  background:#ec4899;color:#fff;font-weight:700;cursor:pointer
+}
+button.secondary{background:#22d3ee;color:#000}
+button.warn{background:#dc2626}
+button:disabled{opacity:.4}
+
+#top,#payment,#hud{
+  display:flex;gap:12px;justify-content:center;flex-wrap:wrap;margin-top:10px
+}
+
+#multiplier{
+  padding:6px 16px;border-radius:999px;background:#111827
+}
+#multiplier.x2{background:#22d3ee;color:#000}
+#multiplier.x4{background:#facc15;color:#000}
+#multiplier.x8{background:#ec4899;color:#fff;box-shadow:0 0 20px #ec4899}
+
+#layout{
+  display:grid;
+  grid-template-columns:1fr 320px;
+  gap:14px;
+  margin-top:14px;
+}
+
+/* GAME */
+#game{
+  position:relative;height:420px;border-radius:14px;
+  background:#020617;overflow:hidden;outline:none
+}
+#game.shake{animation:shake .18s}
+@keyframes shake{
+  25%{transform:translate(-6px,4px)}
+  50%{transform:translate(6px,-4px)}
+  75%{transform:translate(-4px,-6px)}
+}
+
+#bg{position:absolute;inset:0;background-size:cover;background-position:center;opacity:.35}
+#lanes{position:absolute;inset:0;display:flex}
+
+.lane{
+  width:20%;position:relative;cursor:pointer;
+  border-left:1px solid rgba(255,255,255,.1);
+  border-right:1px solid rgba(255,255,255,.1);
+  transition:background .08s, box-shadow .08s
+}
+.lane.hit{
+  background:rgba(34,211,238,.18);
+  box-shadow:inset 0 0 22px rgba(34,211,238,.75)
+}
+.lane.perfect{
+  background:rgba(236,72,153,.3);
+  box-shadow:inset 0 0 36px rgba(236,72,153,1),0 0 22px rgba(236,72,153,1)
+}
+
+.key{
+  position:absolute;bottom:10px;left:50%;
+  transform:translateX(-50%);
+  font-size:26px;font-weight:900;opacity:.8
+}
+
+.note{
+  position:absolute;top:-20px;left:10%;
+  width:80%;height:16px;border-radius:8px;background:#ec4899
+}
+
+#hitLine{
+  position:absolute;left:0;right:0;bottom:80px;
+  height:3px;background:#22d3ee;box-shadow:0 0 18px #22d3ee
+}
+
+/* JUDGEMENT */
+.judge{
+  position:absolute;
+  left:50%;
+  bottom:120px;
+  transform:translateX(-50%);
+  font-size:36px;
+  font-weight:900;
+  animation:judge .6s forwards;
+  pointer-events:none;
+}
+.judge.perfect{color:#fff}
+.judge.great{color:#22d3ee}
+.judge.ok{color:#facc15}
+.judge.miss{color:#f87171}
+@keyframes judge{
+  to{opacity:0;transform:translateX(-50%) scale(1.3)}
+}
+.judge.perfect{
+  color:#ff5ccf;
+  text-shadow:
+    0 0 10px #ff5ccf,
+    0 0 30px #ff5ccf;
+  letter-spacing:2px;
+}
+
+/* SPARKS */
+.spark{
+  position:fixed;border-radius:50%;
+  pointer-events:none;z-index:9999;
+  animation:spark .35s ease-out forwards;
+}
+@keyframes spark{
+  from{opacity:1;transform:scale(.4)}
+  to{opacity:0;transform:scale(1.4)}
+}
+
+/* GAME OVER */
+#gameOver{
+  position:absolute;inset:0;background:rgba(0,0,0,.75);
+  display:none;align-items:center;justify-content:center
+}
+#gameOver .box{
+  background:#020617;padding:22px 26px;border-radius:14px;text-align:center
+}
+
+/* LEADERBOARD */
+#leaderboard{
+  background:#020617;border-radius:14px;padding:12px
+}
+#leaderboard h3{text-align:center;margin:4px 0 10px}
+.lb-row{
+  display:flex;justify-content:space-between;
+  padding:4px 0;font-size:14px;
+  border-bottom:1px solid rgba(255,255,255,.08)
+}
+.lb-empty{text-align:center;opacity:.6;font-size:14px}
+</style>
+</head>
+
+<body>
+<main>
+<h1>Sublime Sounds – Rhythm Master</h1>
+
+<div id="top">
+  <button id="loginBtn">Connect WAX</button>
+  <span id="userLabel"></span>
+  <select id="trackSelect" disabled></select>
+  <button id="startBtn" disabled>Start</button>
+</div>
+
+<div id="payment">
+  <button id="payBtn" class="secondary">Pay 100 SSN</button>
+  <span id="payStatus"></span>
+  <a id="txLink" target="_blank" style="display:none">View Tx</a>
+  <button id="seasonResetBtn" class="warn" style="display:none">
+    New Season (Admin)
+  </button>
+</div>
+
+<div id="hud">
+  <div>Score: <span id="scoreEl">0</span></div>
+  <div>Combo: <span id="comboEl">0</span></div>
+  <div id="multiplier">x1</div>
+</div>
+
+<div id="layout">
+  <div id="game" tabindex="0">
+    <div id="bg"></div>
+    <div id="lanes"></div>
+    <div id="hitLine"></div>
+
+    <div id="gameOver">
+      <div class="box">
+        <h2>Game Over</h2>
+        <div>Final Score: <b id="finalScore">0</b></div>
+        <br>
+        <button onclick="closeGameOver()">OK</button>
+      </div>
+    </div>
+  </div>
+
+  <div id="leaderboard">
+    <h3>Leaderboard</h3>
+    <div id="lbList"></div>
+  </div>
+</div>
+</main>
+
+<script>
+/* ===== CONFIG ===== */
+const COLLECTION="sublimesound";
+const SEASON_ID="season1";
+const ADMIN="a1hd.wam";
+const SSN_CONTRACT="metatoken.gm";
+const SSN_SYMBOL="SSN";
+const SSN_AMOUNT="100.00000000";
+const SSN_RECEIVER="a1hd.wam";
+const LANES=5;
+const NOTE_SPEED=260;
+const HIT_WINDOW=0.18;
+
+/* ===== WAX ===== */
+const wax=new waxjs.WaxJS({rpcEndpoint:"https://api.waxsweden.org"});
+let user=null;
+let paid=false;
+
+/* ===== STATE ===== */
+let tracks=[],currentTrack=null;
+let audio=null,notes=[],raf=null;
+let playing=false,ended=false;
+let score=0,combo=0;
+
+/* ===== MULTIPLIER ===== */
+function getMultiplier(){
+  if(combo>=50)return 8;
+  if(combo>=25)return 4;
+  if(combo>=10)return 2;
+  return 1;
+}
+function updateMultiplier(){
+  const m=getMultiplier();
+  multiplier.textContent="x"+m;
+  multiplier.className=m>1?"x"+m:"";
+}
+
+/* ===== BUILD LANES ===== */
+for(let i=0;i<LANES;i++){
+  const l=document.createElement("div");
+  l.className="lane";
+  l.addEventListener("mousedown",()=>hitLane(i));
+  const k=document.createElement("div");
+  k.className="key";
+  k.textContent=["A","S","D","F","G"][i];
+  l.appendChild(k);
+  lanes.appendChild(l);
+}
+
+/* ===== KEYBOARD ===== */
+const keyMap={a:0,s:1,d:2,f:3,g:4};
+const held=new Set();
+window.addEventListener("keydown",e=>{
+  if(!playing||ended)return;
+  const k=e.key.toLowerCase();
+  if(!(k in keyMap))return;
+  e.preventDefault();
+  if(held.has(k))return;
+  held.add(k);
+  hitLane(keyMap[k]);
+});
+window.addEventListener("keyup",e=>held.delete(e.key.toLowerCase()));
+
+/* ===== VISUAL HELPERS ===== */
+function pulseLane(i,perfect=false){
+  const lane=lanes.children[i];
+  lane.classList.remove("hit","perfect");
+  void lane.offsetWidth;
+  lane.classList.add(perfect?"perfect":"hit");
+  setTimeout(()=>lane.classList.remove("hit","perfect"),120);
+}
+function showJudge(acc,miss=false){
+  const j=document.createElement("div");
+  j.className="judge";
+
+  if(miss){
+    j.textContent = "MISS";
+    j.classList.add("miss");
+  } else if(acc > 0.85){
+    j.textContent = "SUBLIME!";
+    j.classList.add("perfect");
+  } else if(acc > 0.55){
+    j.textContent = "GREAT";
+    j.classList.add("great");
+  } else {
+    j.textContent = "OK";
+    j.classList.add("ok");
+  }
+
+  game.appendChild(j);
+  setTimeout(()=>j.remove(),600);
+}
+function spawnSpark(i,acc){
+  const r=lanes.children[i].getBoundingClientRect();
+  const y=hitLine.getBoundingClientRect().top;
+  const size=80+acc*300;
+  const s=document.createElement("div");
+  s.className="spark";
+  s.style.width=s.style.height=size+"px";
+  s.style.left=(r.left+r.width/2-size/2)+"px";
+  s.style.top=(y-size/2)+"px";
+  s.style.background=`radial-gradient(circle,white,#22d3ee,transparent 70%)`;
+  document.body.appendChild(s);
+  setTimeout(()=>s.remove(),400);
+}
+
+/* ===== LOGIN ===== */
+loginBtn.onclick=async()=>{
+  user=await wax.login();
+  userLabel.textContent=user;
+
+  if(user===ADMIN){
+    paid=true;
+    payStatus.textContent="Admin bypass active";
+    seasonResetBtn.style.display="inline-block";
+  }
+
+  await loadNFTs();
+};
+
+/* ===== PAY SSN ===== */
+payBtn.onclick=async()=>{
+  try{
+    payStatus.textContent="Sending SSN...";
+    const tx=await wax.api.transact({
+      actions:[{
+        account:SSN_CONTRACT,
+        name:"transfer",
+        authorization:[{actor:user,permission:"active"}],
+        data:{
+          from:user,
+          to:SSN_RECEIVER,
+          quantity:`${SSN_AMOUNT} ${SSN_SYMBOL}`,
+          memo:"Sublime Sounds entry fee"
+        }
+      }]
+    },{blocksBehind:3,expireSeconds:120});
+    paid=true;
+    payStatus.textContent="Payment complete";
+    txLink.href=`https://waxblock.io/transaction/${tx.transaction_id}`;
+    txLink.style.display="inline";
+  }catch(e){
+    payStatus.textContent="Payment failed";
+  }
+};
+
+/* ===== NFT LOAD ===== */
+async function loadNFTs(){
+  trackSelect.innerHTML="";
+  tracks=[];
+  const r=await fetch(
+    `https://aa.wax.blacklusion.io/atomicassets/v1/assets?owner=${user}&collection_name=${COLLECTION}&limit=100`
+  );
+  const assets=(await r.json()).data||[];
+
+  for(const a of assets){
+    const d=(a.data&&Object.keys(a.data).length)?a.data:a.template?.immutable_data||{};
+    if(!d.audio)continue;
+    tracks.push({
+      name:d.name,
+      audio:`https://sublimesounds.mypinata.cloud/ipfs/${d.audio}`,
+      image:d.img?`https://sublimesounds.mypinata.cloud/ipfs/${d.img}`:""
+    });
+  }
+
+  tracks.forEach((t,i)=>{
+    const o=document.createElement("option");
+    o.value=i;o.textContent=t.name;
+    trackSelect.appendChild(o);
+  });
+
+  if(tracks.length){
+    currentTrack=tracks[0];
+    bg.style.backgroundImage=`url(${currentTrack.image})`;
+    trackSelect.disabled=false;
+    startBtn.disabled=false;
+    loadLeaderboard();
+  }
+}
+
+trackSelect.onchange=e=>{
+  currentTrack=tracks[e.target.value];
+  bg.style.backgroundImage=`url(${currentTrack.image})`;
+  loadLeaderboard();
+};
+
+/* ===== GAME ===== */
+startBtn.onclick=()=>{
+  if(!paid)return alert("Please pay 100 SSN first");
+  score=0;combo=0;ended=false;
+  scoreEl.textContent=0;comboEl.textContent=0;
+  updateMultiplier();
+  notes=[];playing=true;
+  game.focus();
+
+  audio=new Audio(currentTrack.audio);
+  audio.onloadedmetadata=()=>{
+    spawnNotes();
+    audio.play();
+    loop();
+  };
+};
+
+function spawnNotes(){
+  for(let t=1;t<audio.duration;t+=0.6){
+    const lane=Math.floor(Math.random()*LANES);
+    const el=document.createElement("div");
+    el.className="note";
+    lanes.children[lane].appendChild(el);
+    notes.push({time:t,lane,el,hit:false});
+  }
+}
+
+function loop(){
+  if(!playing)return;
+  const now=audio.currentTime;
+  if(audio.duration && now>=audio.duration-0.05){
+    endGame();return;
+  }
+  notes.forEach(n=>{
+    if(!n.hit){
+      n.el.style.top=(360-(n.time-now)*NOTE_SPEED)+"px";
+    }
+  });
+  raf=requestAnimationFrame(loop);
+}
+
+/* ===== HIT ===== */
+function hitLane(i){
+  if(!playing||ended)return;
+  const now=audio.currentTime;
+  let best=null,bd=999;
+
+  for(const n of notes){
+    if(n.hit||n.lane!==i)continue;
+    const d=Math.abs(n.time-now);
+    if(d<bd){bd=d;best=n;}
+  }
+
+  if(best&&bd<=HIT_WINDOW){
+    best.hit=true;
+    best.el.remove();
+    combo++;
+    const acc=1-bd/HIT_WINDOW;
+    score+=Math.floor(1000*acc*getMultiplier());
+    pulseLane(i,acc>0.85);
+    spawnSpark(i,acc);
+    showJudge(acc);
+  }else{
+    combo=0;
+    pulseLane(i,false);
+    showJudge(0,true);
+  }
+
+  scoreEl.textContent=score;
+  comboEl.textContent=combo;
+  updateMultiplier();
+}
+
+/* ===== END GAME ===== */
+function endGame(){
+  if(ended)return;
+  ended=true;playing=false;
+  cancelAnimationFrame(raf);
+  audio.pause();
+  finalScore.textContent=score;
+  submitScore();
+  gameOver.style.display="flex";
+}
+function closeGameOver(){gameOver.style.display="none";}
+
+/* ===== LEADERBOARD ===== */
+function lbKey(){
+  return `leaderboard_${SEASON_ID}_${currentTrack.name}`;
+}
+function loadLeaderboard(){
+  lbList.innerHTML="";
+  const data=JSON.parse(localStorage.getItem(lbKey())||"[]");
+  if(!data.length){
+    lbList.innerHTML='<div class="lb-empty">No scores yet</div>';
+    return;
+  }
+  data.forEach((r,i)=>{
+    const d=document.createElement("div");
+    d.className="lb-row";
+    d.innerHTML=`<span>${i+1}. ${r.user}</span><span>${r.score}</span>`;
+    lbList.appendChild(d);
+  });
+}
+function submitScore(){
+  let data=JSON.parse(localStorage.getItem(lbKey())||"[]");
+  const existing=data.find(d=>d.user===user);
+  if(existing){
+    if(score>existing.score) existing.score=score;
+  }else{
+    data.push({user,score});
+  }
+  data.sort((a,b)=>b.score-a.score);
+  localStorage.setItem(lbKey(),JSON.stringify(data.slice(0,10)));
+  loadLeaderboard();
+}
+
+/* ===== SEASON RESET (ADMIN ONLY) ===== */
+seasonResetBtn.onclick=()=>{
+  if(user!==ADMIN)return;
+  if(!confirm("Start a new season? This will clear all leaderboards."))return;
+
+  Object.keys(localStorage).forEach(k=>{
+    if(k.startsWith(`leaderboard_${SEASON_ID}_`)){
+      localStorage.removeItem(k);
+    }
+  });
+
+  alert("Season reset complete.");
+  loadLeaderboard();
+};
+</script>
+</body>
+</html>
